Set Kitchenfile path for resource testing
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/.expeditor/integration.resources.yml
+++ b/.expeditor/integration.resources.yml
@@ -17,4 +17,5 @@ steps:
           environment:
             - CONCURRENCY: 5
             - DOCKER: 1
+            - KITCHEN_YAML: kitchen.dokken.yml
           image: ruby:2.7
