Update dockerfile to pull inspec from packages.chef.io since they wont be on rubygems at the time of promotion
Signed-off-by: Nathaniel Kierpiec <nkierpiec@chef.io>

--- a/dobi.yaml
+++ b/dobi.yaml
@@ -16,3 +16,6 @@ image=chef:
   args:
     VERSION: '{env.EXPEDITOR_VERSION}'
     CHANNEL: unstable
+  annotations:
+    tags:
+      - expeditor:final-channel-tags={{major}},{{major}}.{{minor}}
