--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -10,6 +10,8 @@ builder-to-testers-map:
   debian-9-x86_64:
     - debian-9-x86_64
     - debian-10-x86_64
+  debian-10-aarch64:
+    - debian-10-aarch64
   el-6-x86_64:
     - el-6-x86_64
   el-7-aarch64:
@@ -27,6 +29,11 @@ builder-to-testers-map:
   sles-12-x86_64:
     - sles-12-x86_64
     - sles-15-x86_64
+  sles-15-aarch64:
+    - sles-15-aarch64
+  ubuntu-18.04-aarch64:
+    - ubuntu-18.04-aarch64
+    - ubuntu-20.04-aarch64
   ubuntu-16.04-x86_64:
     - ubuntu-16.04-x86_64
     - ubuntu-18.04-x86_64
