--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -26,6 +26,8 @@ builder-to-testers-map:
     - mac_os_x-10.14-x86_64
     - mac_os_x-10.15-x86_64
     - mac_os_x-11-x86_64
+  mac_os_x-11-arm64:
+    - mac_os_x-11-arm64
   sles-12-x86_64:
     - sles-12-x86_64
     - sles-15-x86_64
