--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -29,10 +29,6 @@ platforms:
     image: dokken/amazonlinux-2
     pid_one_command: /usr/lib/systemd/systemd
 
-- name: centos-6
-  driver:
-    image: dokken/centos-6
-    pid_one_command: /sbin/init
 - name: centos-7
   driver:
     image: dokken/centos-7
@@ -55,19 +51,11 @@ platforms:
     intermediate_instructions:
       - RUN /usr/bin/apt-get update -y
 
-- name: fedora-30
+- name: fedora-latest
   driver:
-    image: dokken/fedora-30
-    pid_one_command: /usr/lib/systemd/systemd
-- name: fedora-31
-  driver:
-    image: dokken/fedora-31
+    image: dokken/fedora-latest
     pid_one_command: /usr/lib/systemd/systemd
 
-- name: oraclelinux-6
-  driver:
-    image: dokken/oraclelinux-6
-    pid_one_command: /sbin/init
 - name: oraclelinux-7
   driver:
     image: dokken/oraclelinux-7
@@ -88,12 +76,6 @@ platforms:
 #     image: dokken/opensuse-leap-15
 #     pid_one_command: /bin/systemd
 
-- name: ubuntu-16.04
-  driver:
-    image: dokken/ubuntu-16.04
-    pid_one_command: /bin/systemd
-    intermediate_instructions:
-      - RUN /usr/bin/apt-get update -y
 - name: ubuntu-18.04
   driver:
     image: dokken/ubuntu-18.04
