Run resource integration pipeline when opening PRs
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -182,3 +182,4 @@ subscriptions:
         - inspec/inspec-core-team
     - trigger_pipeline:coverage
     - trigger_pipeline:artifact/habitat
+    - trigger_pipeline:integration/resources
