Add docker=1 flag
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/.expeditor/integration.resources.yml
+++ b/.expeditor/integration.resources.yml
@@ -8,14 +8,6 @@ expeditor:
           limit: 1
 
 steps:
-  # - label: Resource-Platform Tests
-  #   command:
-  #     - CONCURRENCY=3 DOCKER=1 KITCHEN_YAML=kitchen.dokken.yml RAKE_TASK=test:kitchen /workdir/.expeditor/buildkite/verify.sh
-  #   expeditor:
-  #     executor:
-  #       docker:
-  #         image: ruby:2.7
-
   - label: "Kitchen: resources-amazonlinux-2"
     commands:
       - .expeditor/buildkite/bk_linux_exec.sh
@@ -25,6 +17,7 @@ steps:
       - $PWD/.kitchen/logs/kitchen.log
     env:
         KITCHEN_YAML: kitchen.dokken.yml
+        DOCKER: 1
     expeditor:
       executor:
         linux:
