--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -6,6 +6,7 @@ test-path-windows: omnibus/omnibus-test.ps1
 fips-platforms:
   - el-*-x86_64
   - windows-*
+  - ubuntu-*-x86_64
 builder-to-testers-map:
   debian-9-x86_64:
     - debian-9-x86_64
