--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -151,6 +151,9 @@ subscriptions:
     actions:
      - built_in:promote_docker_images
      - built_in:promote_habitat_packages
+  - workload: project_promoted:{{agent_id}}:*
+    actions:
+      - built_in:promote_artifactory_artifact
   - workload: artifact_published:stable:inspec:{{version_constraint}}
     actions:
      - bash:.expeditor/update_dockerfile.sh
