--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -11,8 +11,10 @@ builder-to-testers-map:
   debian-9-x86_64:
     - debian-9-x86_64
     - debian-10-x86_64
+    - debian-11-x86_64
   debian-10-aarch64:
     - debian-10-aarch64
+    - debian-11-aarch64
   el-6-x86_64:
     - el-6-x86_64
   el-7-aarch64:
@@ -29,8 +31,10 @@ builder-to-testers-map:
     - mac_os_x-10.14-x86_64
     - mac_os_x-10.15-x86_64
     - mac_os_x-11-x86_64
+    - mac_os_x-12-x86_64
   mac_os_x-11-arm64:
     - mac_os_x-11-arm64
+    - mac_os_x-12-arm64
   sles-12-x86_64:
     - sles-12-x86_64
     - sles-15-x86_64
@@ -47,5 +51,7 @@ builder-to-testers-map:
     - windows-2012r2-x86_64
     - windows-2016-x86_64
     - windows-2019-x86_64
+    - windows-2022-x86_64
     - windows-8-x86_64
     - windows-10-x86_64
+    - windows-11-x86_64
