--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,8 +5,8 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
-  ignore:
-  - dependency-name: chefstyle
-    versions:
-    - 1.6.1
-    - 1.6.2
+- package-ecosystem: bundler
+  directory: "/omnibus"
+  schedule:
+    interval: daily
+  open-pull-requests-limit: 10
