Exclude all example .rb files from .rubocop.yml to avoid chefstyle/cookstyle conflict
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,7 +5,7 @@ AllCops:
     - 'test/fixtures/profiles/**/*.rb'
     - 'test/fixtures/config_dirs/**/*.rb'
     - 'lib/plugins/inspec-init/templates/plugins/inspec-plugin-template/**/*'
-    - 'examples/**/controls/*.rb'
+    - 'examples/**/*.rb'
     - 'vendor/bundle/**/*'
 Layout/ArgumentAlignment:
   EnforcedStyle: with_first_argument
